# uv-package-template

./: .copilot-instructions.md  .env.example  .envrc.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README-deploy.md  README.md  pyproject.toml
.github/: ci-deploy.yml  copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
src/uv-package-template/: __init__.py  cli.py  example_app_logic.py  setup_logging.py
src/uv_package_template/: __init__.py  __main__.py  cli.py  env_vars.py  example_app_logic.py  setup_logging.py
tests/: test_cli.py  test_example_app_logic.py  test_main_env.py
