[project]
name = "uv-package-template"
version = "0.1.0"
description = "Template for UV package"
authors = [
  { name = "Davis McDowell", email = "78391846+sirbuffalo@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Typing :: Typed",
  # Blocks publishing to PyPI - remove before `uv publish`
  "Private :: Do Not Upload",
]

[project.urls]
Homepage = "https://github.com/sirbuffalo/uv_package_template"
Repository = "https://github.com/sirbuffalo/uv_package_template"
Issues = "https://github.com/sirbuffalo/uv_package_template/issues"

[project.scripts]
main = "uv_package_template.__main__:main"

[project.optional-dependencies]
dev = [
  "ruff>=0.12.10",
  "pytest>=8.3.2",
  "mypy>=1.10.0",
  "poethepoet>=0.26.1",
]
env = [
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = true

[tool.poe.executor]
type = "uv"

[tool.poe.tasks]
# run these with `poe <task>`
# Run `uv sync` with extras, then editable install of .env loader support 
sync = { cmd = "uv sync --project . --extra dev --extra env" }
upgrade-deps = { cmd = "uv sync --project . --upgrade --extra dev --extra env" }
# Run the package without requiring an install; avoids `uv run` pruning
# the editable install on sync, by importing directly from `src`.
run = { cmd = "python -m language", env = { PYTHONPATH = "src" } }
check = { sequence = ["lint", "fmt", "typecheck", "test"] }
lint = "ruff check ."
fmt = "ruff format ."
typecheck = "mypy --sqlite-cache --pretty src tests"
test = "pytest -q"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_package_template"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".github",
  ".vscode",
  ".ruff_cache",
  ".mypy_cache",
  ".pytest_cache",
  "app.log",
  ".env",
]

[tool.ruff]
target-version = "py313"
line-length = 100
fix = true

[tool.ruff.lint]
# Core codes: pyflakes/pycodestyle/imports/bugbear/pyupgrade/simplify + Ruff rules.
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
pretty = true
